# debloating_analysis_tools

./: CMakeLists.txt  README.md  env.default.sh  make.sh
common/: FileManager.cpp  FileManager.h  Frontend.cpp  Frontend.h  RewriterTool.cpp  RewriterTool.h  SourceManager.cpp  SourceManager.h
cov_augment/: CovAugment.cpp  CovAugment.h  Main.cpp  README.md
cov_augment/python/: apply-augmentation.py
fixer/include/: DeadCodeElimination.h  GlobalAddBack.h  GlobalReduction.h  LocalReduction.h  Reduction.h
fixer/python/: apply-fix.py
fixer/src/: DeadCodeElimination.cpp  GlobalAddBack.cpp  GlobalReduction.cpp  LocalReduction.cpp  Main.cpp  Reduction.cpp
instrumenter/: InstruVisitors.cpp  InstruVisitors.h  Instrumentation.cpp  Instrumentation.h  Main.cpp
scripts/compile/: argv-fuzz-inl.h  compile.sh  compile_afl.sh  compile_asan.sh  compile_lsan.sh  compile_msan.sh  compile_tsan.sh  compile_ubsan.sh
scripts/cov_augment/: augmentation_evaluation.sh  wrapper_template_check_related.py  wrapper_template_get_args.py  wrapper_template_run_binary.py
scripts/ddfix/: run_ddfix.sh  run_ddfix_batch.py  test_reproduce.sh
scripts/utils/: align_source_codes.py  get_debloated_lines.py  get_debloated_lines.sh
